--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ a:link, a:visited {
 
 /* Header Styles */
 header {
-  padding: 10px 35px;
+  padding: 5px;
   background-color: var(--darkestpurple-color);
   display: flex;
   justify-content: space-between;
