--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,8 @@ a:link, a:visited {
 
 /* Header Styles */
 header {
-  padding: 5px;
+  padding: 5px 35px;
+  height: 75px;
   background-color: var(--darkestpurple-color);
   display: flex;
   justify-content: space-between;
