--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ a:link, a:visited {
 /* Header Styles */
 header {
   padding: 0px 35px;
-  height: 95px;
+  height: 90px;
   background-color: var(--darkestpurple-color);
   display: flex;
   justify-content: space-between;
@@ -61,7 +61,7 @@ header a {
 
 .linksdiv {
   width: 59%;
-  align-items: vertical;
+  align-items: middle;
 }
 
 
