--- a/src/index.css
+++ b/src/index.css
@@ -70,17 +70,20 @@ header a {
 .leftsection {
   float: left;
   width: 50%;
-  height: 500px;
+  height: 600px;
   background-color: var(--purple-color);
-  color: #000000;
+  color: #ffffff;
+  padding: 10px;
+
 }
 
 .rightsection {
   float: left;
   width: 50%;
-  height: 500px;
+  height: 600px;
   background-color: var(--lightestpurple-color);
   color: #000000;
+  padding: 10px;
 }
 
 
@@ -265,7 +268,7 @@ textarea {
 }
 
 .container {
-  width: 85%;
+  width: 100%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
