--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ header {
 header h1 {
   font-weight:bold;
   font-size:36px;
-  color:var(--yellow-color);
+  color:var(--white-color);
   margin:0;
   text-shadow: 0 0 10px rgba(248, 89, 200, 0.5);
 }
@@ -100,6 +100,7 @@ header a {
 	justify-content: space-evenly;
   background-color: var(--darkestpurple-color);
   height: 200px;
+  width: 100%;
   float: left;
 }
 
