--- a/src/index.css
+++ b/src/index.css
@@ -70,9 +70,9 @@ header a {
 .leftsection {
   float: left;
   width: 50%;
-  height: 615px;
-  background-color: var(--purple-color);
-  color: #ffffff;
+  height: 600px;
+  background-color: var(--lightestpurple-color);
+  color: #000000;
   padding: 10px;
   margin: 0px;
 
@@ -81,10 +81,10 @@ header a {
 .rightsection {
   float: left;
   width: 50%;
-  height: 615px;
+  height: 600px;
   background-color: var(--lightestpurple-color);
   color: #000000;
-  padding: 10px;
+  padding: 0px;
   margin: 0px;
 }
 
@@ -397,7 +397,7 @@ a {
 }
 
 .navActive {
-  color: var(--lightpurple-color);
+  color: var(--lightestpurple-color);
 }
 
 .project-title {
