--- a/src/index.css
+++ b/src/index.css
@@ -58,14 +58,16 @@ header a {
 
 
 .logodiv {
-  width: 20%;
+  width: 15%;
+  line-height: 90px;
 }
 
 .logotext {
   color: #000000;
-  font-size: 20px;
+  font-size: 40px;
   font-weight: bolder;
   text-shadow: 0 0 10px #000000;
+  
 }
 
 .linksdiv {
@@ -409,7 +411,12 @@ a {
 }
 
 .navActive {
+  color: #000000;
+}
+
+.navHover {
   color: #B0B0B0;
+  text-decoration: underline;
 }
 
 .project-title {
