--- a/src/index.css
+++ b/src/index.css
@@ -58,15 +58,15 @@ header a {
 
 
 .logodiv {
-  width: 20%;
+  width: 25%;
   line-height: 90px;
 }
 
 .logotext {
   color: #000000;
   font-size: 40px;
-  font-weight: bolder;
-  text-shadow: 0 0 10px #000000;
+  font-weight: bold;
+  
   
 }
 
