--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ header a {
   padding: 10px;
 }
 
-.leftsection {
+.leftsectionpic {
   float: left;
   width: 50%;
   height: 600px;
@@ -102,6 +102,7 @@ header a {
   color: #000000;
   padding: 10px;
   margin: 0px;
+  align-items: middle;
 
 }
 
@@ -121,10 +122,18 @@ header a {
   height: 600px;
   background-color: #000000;
   color: #ffffff;
-  padding: 0px;
+  padding: 15px;
   margin: 0px;
 }
 
+.summertitle {
+  width: 10%;
+  height: 25px;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 10px;
+  border: 2px solid #ffffff;
+}
 
 
 
