--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ header a {
   height: 600px;
   background-color: var(--white-color);
   color: #000000;
-  padding: 10px;
+  padding: 20%;
   margin: 0px;
   align-items: middle;
 
@@ -127,7 +127,7 @@ header a {
 }
 
 .summertitle {
-  width: 10%;
+  width: 20%;
   height: 25px;
   color: #ffffff;
   font-size: 16px;
