--- a/src/index.css
+++ b/src/index.css
@@ -100,9 +100,10 @@ header a {
   height: 600px;
   background-color: var(--white-color);
   color: #000000;
-  padding: 20px;
   margin: 0px;
   align-items: middle;
+  margin: auto;
+  display: block;
 
 }
 
@@ -127,12 +128,13 @@ header a {
 }
 
 .summertitle {
-  width: 30%;
+  width: 25%;
   height: 25px;
   color: #ffffff;
   font-size: 16px;
-  padding: 10px;
   border: 2px solid #ffffff;
+
+  
 }
 
 
