--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ header a {
 
 .leftsectionpic {
   float: left;
-  width: 50%;
+  width: 40%;
   height: 600px;
   background-color: var(--white-color);
   color: #000000;
@@ -117,7 +117,7 @@ header a {
 
 .rightsectiondark {
   float: left;
-  width: 50%;
+  width: 60%;
   height: 600px;
   background-color: #000000;
   color: #ffffff;
@@ -127,10 +127,13 @@ header a {
 
 .summertitle {
   width: 25%;
-  height: 25px;
+  height: 50px;
+  line-height: 50px;
   color: #ffffff;
   font-size: 16px;
   border: 2px solid #ffffff;
+  padding-left: 5px;
+  padding-right: 5px;
 
   
 }
