--- a/src/index.css
+++ b/src/index.css
@@ -127,13 +127,12 @@ header a {
 
 .summertitle {
   width: 25%;
-  height: 50px;
-  line-height: 50px;
+  height: 45px;
+  line-height: 45px;
   color: #ffffff;
   font-size: 16px;
   border: 2px solid #ffffff;
-  padding-left: 5px;
-  padding-right: 5px;
+  text-align: center;
 
   
 }
