--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,14 @@ header a {
   padding: 10px;
 }
 
+.mainlinktitle {
+  width: 100%;
+  height: 50px;
+  background-color: #000000;
+  color: #ffffff;
+  font-weight: bold;
+}
+
 .leftsectionpicdark {
   float: left;
   width: 40%;
@@ -102,7 +110,7 @@ header a {
   color: #000000;
   margin: 0px;
   text-align: center;
-  margin-top: 50px;
+  
 
 }
 
