--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,7 @@ header a {
   background-color: #000000;
   color: #ffffff;
   font-weight: bold;
+  text-align: center;
 }
 
 .leftsectionpicdark {
@@ -110,7 +111,7 @@ header a {
   color: #000000;
   margin: 0px;
   text-align: center;
-  
+  padding-top: 50px;
 
 }
 
