--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@ header a {
   color: #ffffff;
   font-weight: bold;
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: 2px solid #ffffff;
+
 }
 
 .leftsectionpicdark {
@@ -111,7 +115,7 @@ header a {
   color: #000000;
   margin: 0px;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 25px;
 
 }
 
