--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,7 @@ header a {
 .mainlinktitle {
   width: 100%;
   height: 70px;
+  line-height: 70px;
   background-color: #000000;
   color: #ffffff;
   font-weight: bold;
