--- a/src/index.css
+++ b/src/index.css
@@ -97,12 +97,11 @@ header a {
 .mainlinktitle {
   width: 100%;
   height: 70px;
+  line-height: 70px;
   background-color: #000000;
   color: #ffffff;
   font-weight: bold;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 20px;
   border: 2px solid #ffffff;
 
 }
