--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ header a {
   color: #ffffff;
   font-weight: bold;
   text-align: center;
-  border: 2px solid #ffffff;
+  border: 2px solid #B0B0B0;
 
 }
 
