--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,8 @@ header a {
 .mainlinktitle {
   width: 100%;
   height: 70px;
-  line-height: 75px;
+  line-height: 70px;
+  padding-top: 10px;
   background-color: #000000;
   color: #ffffff;
   font-weight: bold;
