--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,19 @@ header a {
 
 }
 
+.serviceslinktitle {
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  padding-top: 5px;
+  background-color: #000000;
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center;
+  
+
+}
+
 .leftsectionpicdark {
   float: left;
   width: 40%;
