--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,28 @@ header a {
   margin: 0px;
 }
 
+.servicessectiondarktype {
+  float: left;
+  width: 80%;
+  height: 30px;
+  line-height: 30px;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 15px;
+  margin: 0px;
+}
+
+.servicessectiondarkprice {
+  float: left;
+  width: 20%;
+  height: 30px;
+  line-height: 30px;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 15px;
+  margin: 0px;
+}
+
 .summertitle {
   width: 25%;
   height: 45px;
