--- a/src/index.css
+++ b/src/index.css
@@ -170,6 +170,7 @@ header a {
   background-color: #000000;
   color: #ffffff;
   padding: 15px;
+  padding-right: 0px;
   margin: 0px;
 }
 
@@ -181,6 +182,7 @@ header a {
   background-color: #000000;
   color: #ffffff;
   padding: 15px;
+  padding-left: 0px;
   margin: 0px;
 }
 
