--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,18 @@ header a {
 
 }
 
+.sectionpicdarkport {
+  float: left;
+  width: 33%;
+  height: 600px;
+  background-color: var(--black-color);
+  color: #ffffff;
+  margin: 0px;
+  text-align: center;
+  padding-top: 25px;
+
+}
+
 .rightsection {
   float: left;
   width: 50%;
