--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,16 @@ header a {
 .flowerdiv {
   width: 10%;
   line-height: 90px;
+  position: relative;
+}
+
+.flowerimage {
+  position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .homesectionpic {
