--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ header a {
   color: #000000;
   font-size: 40px;
   font-weight: bold;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   
   
 }
