--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ header a {
   color: #000000;
   font-size: 40px;
   font-weight: bold;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
   
   
 }
