--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ header a {
   color: #000000;
   font-size: 40px;
   font-weight: bold;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
   
 }
@@ -285,9 +285,8 @@ body {
   font-size: 18px;
   letter-spacing: .1em;
   background: var(--white-color);
-  color: var(--black-color);
-  font-family: 'Poiret One', cursive;             
-  font-family: Helvetica, Arial, sans-serif;
+  color: var(--black-color);           
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
@@ -297,7 +296,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Roboto', sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 500;
   margin: 5px 0;
   line-height: 1.25;
