--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,19 @@ header a {
   
 }
 
+.portfoliotitle {
+  width: 100%;
+  height: 45px;
+  line-height: 45px;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: bold;
+  border: 2px solid #ffffff;
+  text-align: center;
+
+  
+}
+
 
 
 
