--- a/src/index.css
+++ b/src/index.css
@@ -236,14 +236,15 @@ header a {
 }
 
 .portfoliotitle {
-  width: 100%;
+  width: 80%;
   height: 45px;
   line-height: 45px;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 36px;
   font-weight: bold;
   border: 2px solid #ffffff;
   text-align: center;
+  margin-left: 25px;
 
   
 }
