--- a/src/index.css
+++ b/src/index.css
@@ -147,19 +147,20 @@ header a {
 .sectionpicdarkport {
   float: left;
   width: 33%;
-  height: 600px;
+  height: 615px;
   background-color: var(--black-color);
   color: #ffffff;
   margin: 0px;
   text-align: center;
   padding-top: 25px;
+  text-wrap: wrap;
 
 }
 
 .sectionpicdarkportsliver {
   float: left;
   width: 1%;
-  height: 600px;
+  height: 615px;
   background-color: var(--black-color);
   color: #ffffff;
   margin: 0px;
