--- a/src/index.css
+++ b/src/index.css
@@ -101,8 +101,8 @@ header a {
 .aboutussection {
   width: 100%;
   height: 150px;
-  background-color: var(--white-color);
-  color: #000000;
+  background-color: var(--black-color);
+  color: #ffffff;
   padding: 10px;
 }
 
@@ -284,7 +284,7 @@ header a {
 .footer {
   color: var(--black-color);
   background-color: var(--white-color);
-  height: 200px;
+  height: 225px;
   width: 100%;
   float: left;
   padding: 10px;
