--- a/src/index.css
+++ b/src/index.css
@@ -206,6 +206,7 @@ header a {
   color: #000000;
   text-align: center;
   padding-bottom: 25px;
+  margin-top: -25px;
 }
 
 
@@ -233,7 +234,6 @@ header a {
   float: left;
   width: 50%;
   height: 700px;
-  font-size: 14px;
   background-color: #000000;
   color: #ffffff;
   padding: 15px;
