--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ header a {
 
 .aboutussection {
   width: 100%;
-  height: 725px;
+  height: 675px;
   background-color: var(--black-color);
   color: #ffffff;
   padding: 25px;
@@ -136,6 +136,18 @@ header a {
   float: left;
   width: 40%;
   height: 600px;
+  background-color: var(--black-color);
+  color: #000000;
+  margin: 0px;
+  text-align: center;
+  padding-top: 25px;
+
+}
+
+.leftsectionpicdarkabout {
+  float: left;
+  width: 40%;
+  height: 550px;
   background-color: var(--black-color);
   color: #000000;
   margin: 0px;
@@ -224,6 +236,16 @@ header a {
   float: left;
   width: 60%;
   height: 600px;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 15px;
+  margin: 0px;
+}
+
+.rightsectiondarkabout {
+  float: left;
+  width: 60%;
+  height: 550px;
   background-color: #000000;
   color: #ffffff;
   padding: 15px;
