--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,18 @@ header a {
 
 }
 
+.leftsectionpicdarkgoals {
+  float: left;
+  width: 40%;
+  height: 500px;
+  background-color: var(--black-color);
+  color: #000000;
+  margin: 0px;
+  text-align: center;
+  padding-top: 25px;
+
+}
+
 .leftsectionpicdarkabout {
   float: left;
   width: 40%;
@@ -236,6 +248,16 @@ header a {
   float: left;
   width: 60%;
   height: 600px;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 15px;
+  margin: 0px;
+}
+
+.rightsectiondarkgoals {
+  float: left;
+  width: 60%;
+  height: 500px;
   background-color: #000000;
   color: #ffffff;
   padding: 15px;
