--- a/src/index.css
+++ b/src/index.css
@@ -328,6 +328,16 @@ header a {
   margin: 0px;
 }
 
+.servicessectiondarkbottom {
+  float: left;
+  width: 50%;
+  height: 375px;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 15px;
+  margin: 0px;
+}
+
 
 .servicessectiondarktype {
   float: left;
