--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ header a {
 
 .reviewsection {
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-color: var(--black-color);
   color: #ffffff;
   padding: 25px;
@@ -120,6 +120,7 @@ header a {
   height: 275px;
   background-color: var(--black-color);
   color: #ffffff;
+  padding-top: 25px;
 }
 
 .mainlinktitle {
