--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ header a {
 
 .reviewsection {
   width: 100%;
-  height: 500px;
+  height: 550px;
   background-color: var(--black-color);
   color: #ffffff;
   padding: 25px;
@@ -123,6 +123,7 @@ header a {
   padding-top: 25px;
   padding-right: 25px;
   font-size: 18px;
+  text-align: center;
 }
 
 .mainlinktitle {
